--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,42 @@
+*::after, *::before{
+    box-sizing: border-box;
+}
+
+*{
+    margin: 0;
+    
+}
+
+.container{
+    position: relative;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    font-size: 50px;
+}
+
+.restaurant-name{
+    z-index: 10;
+}
 
 img{
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 100vw;
+    max-height: 100vh;
+    z-index: 1;
+}
+
+.title-header{
+    position: absolute;
+    top: 30%;
+    left: 35%;
+    transform: translate(-50% -50%);
+    
+}
+
+.words{
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50% -50%);
+    margin-right: 200px;
 }
